--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ MONGO_DB = proyecto_bigData
 MONGO_COLECCION = usuario_roles
 ELASTIC_CLOUD_URL = https://fe68aba5b3194046b86205bc65ddcf71.us-central1.gcp.cloud.es.io:443
 ELASTIC_APY_KEY = ZXphVTBwb0JBS1JFTTg4bzc4clY6UWlMaXQ5ZHVyZEVzTEh5amJtOWpEZw==
+SECRET_KEY = ZXphVTBwb0JBS1JF12345
